# phoenix

./: .gitignore  .gitmodules  BUILD.md  Dockerfile  LICENSE  README.md  TRANSLATION.md  build.gradle  build.gradle.kts  gradle.properties  local.properties.template  settings.gradle  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/secp256k1/: libsecp256k1-config.h  org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h
app/src/main/res/anim/: blinking.xml  fade_in.xml  fade_out.xml  payment_insertion_animation.xml  pop_in.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: app_bg_default.xml  app_bg_shade.xml  app_bg_testnet.xml  app_notif_bg.xml  button_bg.xml  button_bg_primary_border.xml  button_bg_square.xml  button_bg_square_border.xml  button_main_page_left.xml  button_main_page_right.xml  button_pin.xml  button_virtual_key_bg.xml  button_virtual_key_text.xml  editable_bg_dotted.xml  ic_alert_triangle.xml  ic_alert_triangle_24dp.xml  ic_alert_triangle_white_24dp.xml  ic_arrow_back.xml  ic_arrow_back_24dp.xml  ic_arrow_next.xml  ic_backspace.xml  ic_battery_charging.xml  ic_bg1.xml  ic_blank.xml  ic_bolt_gradient.xml  ic_brush.xml  ic_btc_icon.xml  ic_build.xml  ic_bullet.xml  ic_chain.xml  ic_check.xml  ic_check_circle.xml  ic_check_white_24dp.xml  ic_chevron_down.xml  ic_chevron_right.xml  ic_chevron_up.xml  ic_circle_check.xml  ic_circle_check_24dp.xml  ic_clipboard.xml  ic_clipboard_24dp.xml  (+81 more)
app/src/main/res/drawable-v24/: button_pin.xml  editable_bg_dotted.xml  ic_backspace_white_24dp.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_init_wallet.xml  activity_main.xml  activity_scan.xml  custom_action_bar_view.xml  custom_button_view.xml  custom_coin_amount_view.xml  custom_coin_view.xml  custom_progress_text_view.xml  custom_switch_view.xml  custom_virtual_keyboard_view.xml  dialog_alert.xml  dialog_alert_checkbox.xml  dialog_alert_image.xml  dialog_alert_input.xml  dialog_electrum.xml  dialog_max_trampoline_fee.xml  dialog_pin.xml  dialog_seed.xml  fragment_connectivity.xml  fragment_ftue.xml  fragment_ftue_backup.xml  fragment_ftue_lightning.xml  fragment_ftue_welcome.xml  fragment_init_wallet.xml  fragment_init_wallet_auto_create.xml  fragment_init_wallet_create.xml  fragment_init_wallet_restore.xml  fragment_init_wallet_setup_pin.xml  fragment_lnurl_auth.xml  fragment_lnurl_login.xml  fragment_lnurl_pay.xml  fragment_lnurl_withdraw.xml  fragment_main.xml  fragment_patch_notes.xml  fragment_payment_details.xml  fragment_payment_details_technicals.xml  fragment_read_invoice.xml  fragment_receive.xml  fragment_receive_with_open.xml  fragment_send.xml  (+24 more)
app/src/main/res/menu/: bottom_nav.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/navigation/: nav_graph_init_wallet.xml  nav_graph_main.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/resources/: application.conf
app/src/main/sqldelight/: 1.sqm
(+2487 files in other folders)
